chore: more ffm api samples